--- a/about.html
+++ b/about.html
@@ -3,18 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Readings - Personal Website</title>
+  <title>About - Personal Website</title>
   <link rel="stylesheet" href="css/style.css">
-  <!-- Font Awesome for icons -->
+  <!-- Font Awesome for social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <canvas id="canvas"></canvas>
-  <nav class="top-nav">
-    <a href="index.html">Home</a>
-    <a href="blog.html">Blog</a>
-    <a href="readings.html">Readings</a>
-  </nav>
   <div class="container">
     <aside class="sidebar">
         <a href="index.html">
@@ -28,18 +23,30 @@
         <a href="https://www.youtube.com/channel/UCBmUpx94wuIksVvuy1fR2LQ" target="_blank"><i class="fab fa-youtube"></i></a>
       </nav>
     </aside>
-    <main class="content readings-content">
-      <h1>Readings</h1>
-      <ul>
-        <li><a href="#">Article/Book Title 1</a> - A brief description of this reading.</li>
-        <li><a href="#">Article/Book Title 2</a> - Some description about why it's meaningful.</li>
-        <li><a href="#">Article/Book Title 3</a> - Another description here...</li>
-      </ul>
+    <main class="content about-content">
+      <h1>About Me</h1>
+        <br>
+      <section class="about-section">
+        <h2>Interests</h2>
+        <p>
+          My favorite things include nighttime walks, violin, humidity, meditation, basketball, reading, music, rain, and the peaks of minor melodies.
+        </p>
+      </section>
+
+      <!-- Add more sections as needed -->
+      <!-- <section class="about-section">
+        <h2>Context</h2>
+        <p>
+          I studied at MIT, focusing on AI, math, and physics. Currently, I'm working at Redwood Research on making AI systems safer.
+        </p>
+      </section> -->
     </main>
   </div>
-  <footer>
-    <p>&copy; 2023 [Your Name]. All rights reserved.</p>
-  </footer>
+  <nav class="top-nav">
+    <a href="index.html">Home</a>
+    <a href="blog.html">Blog</a>
+    <a href="readings.html">Readings</a>
+  </nav>
   <script src="js/animation.js"></script>
 </body>
 </html> 
