--- a/index.html
+++ b/index.html
@@ -5,37 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Me - Personal Website</title>
   <link rel="stylesheet" href="css/style.css">
-  <!-- Include Font Awesome for social icons -->
+  <!-- Font Awesome for social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header>
-    <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
-    <nav>
-      <ul>
-        <li><a href="index.html">About</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="readings.html">Readings</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <main>
-    <section class="about">
-      <h1>Hello, I'm [Your Name]</h1>
+  <!-- Full-screen canvas background for nature animation -->
+  <canvas id="canvas"></canvas>
+
+  <!-- Main container with sidebar and centered content -->
+  <div class="container home-container">
+    <aside class="sidebar">
+        <a href="index.html">
+            <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
+          </a>      <nav class="social">
+        <a href="https://twitter.com/asher5772" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/asherps" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://instagram.com/asher_bps" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/asher-parker-sartori-456033245/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://www.lesswrong.com/users/fiyr" target="_blank" class="lw-link"><span class="lw-icon">lw</span></a>
+        <a href="https://www.youtube.com/channel/UCBmUpx94wuIksVvuy1fR2LQ" target="_blank"><i class="fab fa-youtube"></i></a>
+      </nav>
+    </aside>
+    <main class="content home-content">
+      <h1>Hello, I'm Asher</h1>
       <p>
-        I'm an undergraduate student at MIT studying AI and math. I conduct research in these areas and have a deep passion for nature.
+        I like learning about AI and math and physics. Until recently, I was doing this full time at MIT.
       </p>
-      <div class="social-links">
-        <a href="https://twitter.com/yourprofile" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/yourprofile" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-      </div>
-    </section>
-  </main>
-  
-  <footer>
-    <p>&copy; 2023 [Your Name]. All rights reserved.</p>
-  </footer>
+      <p>
+        Now, I work at Redwood Research, where I try to make AI agents safer.
+      </p>
+      <p>
+        I sometimes blog about philosophy, self-improvement, and various other nerdy interests.
+      </p>
+      <nav class="main-nav">
+        <a href="about.html">About</a>
+        <a href="blog.html">Blog</a>
+        <a href="readings.html">Readings</a>
+      </nav>
+    </main>
+  </div>
+
+
+  <script src="js/animation.js"></script>
 </body>
 </html> 
