--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
   <canvas id="canvas"></canvas>
   <nav class="top-nav">
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
     <a href="readings.html">Readings</a>
   </nav>
@@ -33,26 +34,31 @@
         <div class="main-blog">
           <h1>Longform</h1>
           <article>
-            <h2>Blog Post Title 1</h2>
-            <p>This is a summary of the blog post. More content coming soon...</p>
-            <a href="blog/post1.html">Read More</a>
+            <h2>Appreciation</h2>
+            <p>a framing i find useful</p>
+            <a href="blog/appreciation.html">Read More</a>
           </article>
           <article>
-            <h2>Blog Post Title 2</h2>
-            <p>This is another summary of the blog post. Check back later for the full post...</p>
-            <a href="blog/post2.html">Read More</a>
+            <h2>Sophomore Fall — Course Reviews and Happenings</h2>
+            <p>reflection on fall classes and other general happenings</p>
+            <a href="blog/sophomore_fall.html">Read More</a>
+          </article>
+          <article>
+            <h2>Freshman Year — Course Reviews and Happenings</h2>
+            <p>reflection on freshman year — mostly classes, but i also have a life</p>
+            <a href="blog/freshman.html">Read More</a>
           </article>
         </div>
         
         <div class="quick-takes">
           <h2>Quick Takes</h2>
           <div class="take">
-            <p>Short thought or observation about something interesting...</p>
-            <span class="date">June 1, 2023</span>
+            <p><a href="quicktakes/alignment_target.html">Alignment Targets</a></p>
+            <span class="date">July 11, 2023</span>
           </div>
           <div class="take">
-            <p>Another quick thought or interesting observation...</p>
-            <span class="date">May 30, 2023</span>
+            <p><a href="quicktakes/anki.html">Anki is not just about Memorization</a></p>
+            <span class="date">July 10, 2023</span>
           </div>
         </div>
       </div>
