--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <a href="https://www.youtube.com/channel/UCBmUpx94wuIksVvuy1fR2LQ" target="_blank"><i class="fab fa-youtube"></i></a>
       </nav>
     </aside>
-    <main class="content about-content">
+    <main class="content about-content" style="padding-top: 100px; margin-left: 200px;">
       <h1>About Me</h1>
         <br>
       <section class="about-section">
@@ -44,6 +44,7 @@
   </div>
   <nav class="top-nav">
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
     <a href="readings.html">Readings</a>
   </nav>
