--- a/readings.html
+++ b/readings.html
@@ -12,6 +12,7 @@
   <canvas id="canvas"></canvas>
   <nav class="top-nav">
     <a href="index.html">Home</a>
+    <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
     <a href="readings.html">Readings</a>
   </nav>
