--- a/about.html
+++ b/about.html
@@ -49,5 +49,6 @@
     <a href="readings.html">Readings</a>
   </nav>
   <script src="js/animation.js"></script>
+  <script src="js/error-handler.js"></script>
 </body>
 </html> 
