--- a/blog.html
+++ b/blog.html
@@ -34,17 +34,22 @@
         <div class="main-blog">
           <h1>Longform</h1>
           <article>
-            <h2>Appreciation</h2>
+            <h2>why haven't language models generated novel insights?</h2>
+            <p>dwarkesh's question</p>
+            <a href="blog/novel_insights.html">Read More</a>
+          </article>
+          <article>
+            <h2>appreciation</h2>
             <p>a framing i find useful</p>
             <a href="blog/appreciation.html">Read More</a>
           </article>
           <article>
-            <h2>Sophomore Fall — Course Reviews and Happenings</h2>
+            <h2>sophomore fall — course reviews and happenings</h2>
             <p>reflection on fall classes and other general happenings</p>
             <a href="blog/sophomore_fall.html">Read More</a>
           </article>
           <article>
-            <h2>Freshman Year — Course Reviews and Happenings</h2>
+            <h2>freshman year — course reviews and happenings</h2>
             <p>reflection on freshman year — mostly classes, but i also have a life</p>
             <a href="blog/freshman.html">Read More</a>
           </article>
@@ -67,6 +72,7 @@
   <footer>
     <p>&copy; 2023 [Your Name]. All rights reserved.</p>
   </footer>
+  <script src="js/error-handler.js"></script>
   <script src="js/animation.js"></script>
 </body>
 </html> 
