--- a/quicktakes/alignment_target.html
+++ b/quicktakes/alignment_target.html
@@ -59,5 +59,6 @@
     </main>
   </div>
   <script src="../js/animation.js"></script>
+  <script src="../js/error-handler.js"></script>
 </body>
 </html>
