--- a/quicktakes/anki.html
+++ b/quicktakes/anki.html
@@ -47,5 +47,6 @@
     </main>
   </div>
   <script src="../js/animation.js"></script>
+  <script src="../js/error-handler.js"></script>
 </body>
 </html>
