--- a/about.html
+++ b/about.html
@@ -27,10 +27,40 @@
       <h1>About Me</h1>
         <br>
       <section class="about-section">
-        <h2>Interests</h2>
         <p>
-          My favorite things include nighttime walks, violin, humidity, meditation, basketball, reading, music, rain, and the peaks of minor melodies.
+          I like nighttime walks, violin, humidity, meditation, basketball, reading, music, rain, and the peaks of minor melodies.
         </p>
+        <p>
+          I also like  climbing things, being happy for my friends, long conversations that change the way I see the world, and feeling like all music sounds better than usual.
+        </p>
+        <p>
+        I also like parties, meditation, and admiring trees. I don't like museums because trees are more beautiful than paintings and history. 
+        </p>
+
+        <p>
+          I like both {long, intense conversations} and {existing together in silence}.
+        </p>
+
+        <p>
+        Most of my values in day-to-day life surround things like being unusually kind and empathetic in relationships and doing my best to embody the sorts of norms i wish existed everywhere.
+        Eg, I try very hard not to let other people’s judgements affect what i do, because i don’t want to create the sort of culture where other people are encouraged to give in to negative judgements.
+        </p>
+
+        <p>
+        I consider my dayjob to be making sure AI goes well for the world, so I spend unreasonable amounts of time unraveling the details of how this might happen. I could talk about this for days on end. 
+        </p>
+
+        <p>
+        I also enjoy thinking about AI theory more than I do most other subjects. It feels like a projection of intuitive properties of the world onto the domain of math. Physics also has this property.
+        </p>
+
+        <p>
+        I'm not reflective enough, I have very little emotional self-awareness, I don't trust myself enough, and I sometimes subconciously limit how close I get with other people. I also have deeper flaws which won't make it to this website.
+        </p>
+
+        <p>
+        Some frames i like include ifs, libertarian paternalism, decision-theoretic time-coherence, <a href="blog/appreciation.html">appreciation</a>, kantianism, consequentialism, and affective presence.</p>
+
       </section>
 
       <!-- Add more sections as needed -->
@@ -46,7 +76,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
-    <a href="readings.html">Readings</a>
+    <a href="updates.html">Updates</a>
   </nav>
   <script src="js/animation.js"></script>
   <script src="js/error-handler.js"></script>
