--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <aside class="sidebar">
         <a href="index.html">
             <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
-          </a>      <nav class="social">
-        <a href="https://twitter.com/asher5772" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/asherps" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://instagram.com/asher_bps" target="_blank"><i class="fab fa-instagram"></i></a>
+            </a><nav class="social">
+            <a href="https://twitter.com/asher5772" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://scholar.google.com/citations?user=rJMoYZEAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+         <a href="https://instagram.com/asher_bps" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/asher-parker-sartori-456033245/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.lesswrong.com/users/fiyr" target="_blank" class="lw-link"><span class="lw-icon">lw</span></a>
         <a href="https://www.youtube.com/channel/UCBmUpx94wuIksVvuy1fR2LQ" target="_blank"><i class="fab fa-youtube"></i></a>
@@ -29,7 +29,7 @@
     <main class="content home-content">
       <h1>Hello, I'm Asher</h1>
       <p>
-        I like learning about AI and math and physics. Until recently, I was doing this full time at MIT.
+        I like learning about AI and physics and math. Until recently, I was doing this full time at MIT.
       </p>
       <p>
         Now, I work at Redwood Research, where I try to make AI agents safer.
@@ -40,7 +40,7 @@
       <nav class="main-nav">
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
-        <a href="readings.html">Readings</a>
+        <a href="updates.html">Updates</a>
       </nav>
     </main>
   </div>
