--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
-    <a href="readings.html">Readings</a>
+    <a href="updates.html">Updates</a>
   </nav>
   <div class="container">
     <aside class="sidebar">
@@ -32,7 +32,7 @@
     <main class="content blog-content" style="margin-left: 200px;">
       <div class="blog-container">
         <div class="main-blog">
-          <h1>Longform</h1>
+          <h1>longform</h1>
           <article>
             <h2>why haven't language models generated novel insights?</h2>
             <p>dwarkesh's question</p>
@@ -56,7 +56,7 @@
         </div>
         
         <div class="quick-takes">
-          <h2>Quick Takes</h2>
+          <h2>quick takes</h2>
           <div class="take">
             <p><a href="quicktakes/alignment_target.html">Alignment Targets</a></p>
             <span class="date">December 20, 2024</span>
