--- a/updates.html
+++ b/updates.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Readings - Personal Website</title>
+  <title>Updates - Personal Website</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -14,7 +14,7 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
-    <a href="readings.html">Readings</a>
+    <a href="updates.html">Updates</a>
   </nav>
   <div class="container">
     <aside class="sidebar">
@@ -30,11 +30,9 @@
       </nav>
     </aside>
     <main class="content readings-content">
-      <h1>Readings</h1>
+      <h1>Updates</h1>
       <ul>
-        <li><a href="#">Article/Book Title 1</a> - A brief description of this reading.</li>
-        <li><a href="#">Article/Book Title 2</a> - Some description about why it's meaningful.</li>
-        <li><a href="#">Article/Book Title 3</a> - Another description here...</li>
+
       </ul>
     </main>
   </div>
