--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
           </a>      <nav class="social">
         <a href="https://twitter.com/asher5772" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/asherps" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://scholar.google.com/citations?user=rJMoYZEAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
         <a href="https://instagram.com/asher_bps" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/asher-parker-sartori-456033245/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.lesswrong.com/users/fiyr" target="_blank" class="lw-link"><span class="lw-icon">lw</span></a>
@@ -43,7 +43,7 @@
 
         <p>
         Most of my values in day-to-day life surround things like being unusually kind and empathetic in relationships and doing my best to embody the sorts of norms i wish existed everywhere.
-        Eg, I try very hard not to let other people’s judgements affect what i do, because i don’t want to create the sort of culture where other people are encouraged to give in to negative judgements.
+        Eg, I try very hard not to let other people's judgements affect what i do, because i don't want to create the sort of culture where other people are encouraged to give in to negative judgements.
         </p>
 
         <p>
