--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
             <img src="images/profile.jpg" alt="Profile Photo" class="profile-photo">
           </a>      <nav class="social">
         <a href="https://twitter.com/asher5772" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/asherps" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://scholar.google.com/citations?user=rJMoYZEAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
         <a href="https://instagram.com/asher_bps" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.linkedin.com/in/asher-parker-sartori-456033245/" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="https://www.lesswrong.com/users/fiyr" target="_blank" class="lw-link"><span class="lw-icon">lw</span></a>
