--- a/blog.html
+++ b/blog.html
@@ -34,11 +34,6 @@
         <div class="main-blog">
           <h1>longform</h1>
           <article>
-            <h2>why haven't language models generated novel insights?</h2>
-            <p>dwarkesh's question</p>
-            <a href="blog/novel_insights.html">Read More</a>
-          </article>
-          <article>
             <h2>appreciation</h2>
             <p>a framing i find useful</p>
             <a href="blog/appreciation.html">Read More</a>
@@ -50,13 +45,17 @@
           </article>
           <article>
             <h2>freshman year — course reviews and happenings</h2>
-            <p>reflection on freshman year — mostly classes, but i also have a life</p>
+            <p>reflection on freshman year — mostly classes, but i also have a life</p>
             <a href="blog/freshman.html">Read More</a>
           </article>
         </div>
         
         <div class="quick-takes">
           <h2>quick takes</h2>
+          <div class="take">
+            <p><a href="quicktakes/novel_insights.html">why haven't language models generated novel insights?</a></p>
+            <span class="date">January 5, 2024</span>
+          </div>
           <div class="take">
             <p><a href="quicktakes/alignment_target.html">Alignment Targets</a></p>
             <span class="date">December 20, 2024</span>
