--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
         <p>
         Most of my values in day-to-day life surround things like being unusually kind and empathetic in relationships and doing my best to embody the sorts of norms i wish existed everywhere.
-        Eg, I try very hard not to let other people's judgements affect what i do, because i don't want to create the sort of culture where other people are encouraged to give in to negative judgements.
+        I try very hard not to let other people's judgements affect what i do, because i don't want to create the sort of culture where other people are encouraged to give in to negative judgements.
         </p>
 
         <p>
@@ -51,7 +51,7 @@
         </p>
 
         <p>
-        I also enjoy thinking about AI theory more than I do most other subjects. It feels like a projection of intuitive properties of the world onto the domain of math. Physics also has this property.
+        I also enjoy thinking about AI theory more than I do most other subjects. It feels like a projection of intuitive properties of the world into formalizable math. Physics also has this property.
         </p>
 
         <p>
