--- a/blog.html
+++ b/blog.html
@@ -52,10 +52,10 @@
         
         <div class="quick-takes">
           <h2>quick takes</h2>
-          <div class="take">
+          <!-- <div class="take">
             <p><a href="quicktakes/novel_insights.html">why haven't language models generated novel insights?</a></p>
             <span class="date">January 5, 2024</span>
-          </div>
+          </div> -->
           <div class="take">
             <p><a href="quicktakes/alignment_target.html">Alignment Targets</a></p>
             <span class="date">December 20, 2024</span>
