--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         I like learning about AI and physics and math. Until recently, I was doing this full time at MIT.
       </p>
       <p>
-        Now, I work at Redwood Research, where I try to make AI agents safer.
+        I left to work at Redwood Research, where I worked on monitoring AI agents.
+      </p>
+      <p>
+        After leaving Redwood a month ago, I'm now exploring other avenues that I hope will have higher upside.
       </p>
       <p>
         I sometimes blog about philosophy, self-improvement, and various other nerdy interests.
