--- a/quicktakes/anki.html
+++ b/quicktakes/anki.html
@@ -11,8 +11,9 @@
   <canvas id="canvas"></canvas>
   <nav class="top-nav">
     <a href="../index.html">Home</a>
+    <a href="../about.html">About</a>
     <a href="../blog.html">Blog</a>
-    <a href="../readings.html">Readings</a>
+    <a href="../updates.html">Updates</a>
   </nav>
   <div class="container">
     <aside class="sidebar">
@@ -40,7 +41,7 @@
           <br>
           <p>Make Anki cards for interesting proofs! For the high-level ideas of how to solve certain classes of challenging problems! Don't just memorize simple definitions; memorize patterns of reasoning, so that when you need them, they feel as simple as remembering the name of the protein that lets bacteria survive the Arctic by shutting off their ribosomes.</p>
           <br>
-          <p>Neuroplasticity is fucking awesome; use it! Think intentionally — don't just practice thinking, learn how to think. Keep in mind what you're really working towards, I guess.</p>
+          <p>Don't just practice thinking, learn how to think by remembering the useful patterns! Keep in mind what you're really working towards, I guess.</p>
           <br>
           <p>About a year ago, I stopped taking notes and opted to make Anki cards instead. It works way better, even when the bottleneck is understanding and not memorization.</p>
         </div>
