--- a/index.html
+++ b/index.html
@@ -28,23 +28,32 @@
     </aside>
     <main class="content home-content">
       <h1>Hello, I'm Asher</h1>
+      <br>
       <p>
-        I like learning about AI and physics and math. Until recently, I was doing this full time at MIT.
+      I like learning about AI and physics and math.
       </p>
       <p>
-        I left to work at Redwood Research, where I worked on monitoring AI agents.
+      For much of the past few years, I've been doing this full time at MIT.
+      </p>
+      <br>
+      <p>
+      Last spring, I left school to work at Redwood Research on monitoring AI agents.
       </p>
       <p>
-        After leaving Redwood a month ago, I'm now exploring other avenues that I hope will have higher upside.
+      Now, I'm thinking about ambitious interpretability, continual learning, and generalization.  
       </p>
+      <br>
       <p>
-        I sometimes blog about philosophy, self-improvement, and various other nerdy interests.
+      I sometimes blog about philosophy, self-improvement, and various other nerdy interests.
       </p>
       <nav class="main-nav">
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
         <a href="updates.html">Updates</a>
       </nav>
+      <br>
+      <br>
+      <br>
     </main>
   </div>
 
