--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
         </p>
 
         <p>
-        I also enjoy thinking about AI theory more than I do most other subjects. It feels like a projection of intuitive properties of the world into formalizable math. Physics also has this property.
+        I also enjoy thinking about AI theory more than I do most other subjects. It feels like a projection of intuitive properties of the world onto formalizable math. Physics also has this property.
         </p>
 
         <p>
