--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>About Me - Personal Website</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome for social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -37,7 +38,7 @@
       </p>
       <br>
       <p>
-      Last spring, I left school to work at Redwood Research on monitoring AI agents.
+      Last spring, I worked at Redwood Research on monitoring AI agents.
       </p>
       <p>
       Now, I'm thinking about ambitious interpretability, continual learning, and generalization.  
