--- a/quicktakes/anki.html
+++ b/quicktakes/anki.html
@@ -6,6 +6,7 @@
   <title>Anki is not just about Memorization - Quick Take</title>
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>body { background: white; }</style>
 </head>
 <body>
   <nav class="top-nav">
