Add quick take on scaling parameter decomposition, comment out about paragraph

--- a/blog.html
+++ b/blog.html
@@ -52,6 +52,10 @@
         
         <div class="quick-takes">
           <h2>quick takes</h2>
+          <div class="take">
+            <p><a href="quicktakes/parameter_decomposition.html">thoughts on scaling parameter decomposition</a></p>
+            <span class="date">February 4, 2026</span>
+          </div>
           <!-- <div class="take">
             <p><a href="quicktakes/novel_insights.html">why haven't language models generated novel insights?</a></p>
             <span class="date">January 5, 2024</span>
