Lowercase quick take titles, edit parameter decomposition wording

--- a/blog.html
+++ b/blog.html
@@ -61,11 +61,11 @@
             <span class="date">January 5, 2024</span>
           </div> -->
           <div class="take">
-            <p><a href="quicktakes/alignment_target.html">Alignment Targets</a></p>
+            <p><a href="quicktakes/alignment_target.html">alignment targets</a></p>
             <span class="date">December 20, 2024</span>
           </div>
           <div class="take">
-            <p><a href="quicktakes/anki.html">Anki is not just about Memorization</a></p>
+            <p><a href="quicktakes/anki.html">anki is not just about memorization</a></p>
             <span class="date">December 22, 2024</span>
           </div>
         </div>
