--- a/quicktakes/parameter_decomposition.html
+++ b/quicktakes/parameter_decomposition.html
@@ -46,6 +46,10 @@
           <br>
           <p>This is the sort of thing that someone on the team would have solved already if it were easily solvable, I think. But it definitely seems very fundamentally possible, especially if you incorporate some cross-datapoint information theoretic measure into the training loop. If these better CIs work, we just have to 1) figure out MDL and 2) figure out how to do stochastic masking only on the correct abstractions—and then we should be able to throw compute at the method and find the true circuits? Of course, there's also something to be said for working on agendas that aim to automate a notion of human-interpretability rather than circuit-finding in the network's ontology. The circuits we find w/ parameter decomposition might be pretty wild.</p>
           <br>
+          <p>To elaborate on the stochastic masking point: The claim of SPD is that networks can be divided into circuits. On any given input, only some of these circuits are active. For each inactive circuit to 'not matter', we should be able to scale it by an arbitrary alpha in [0,1], and the network's behavior should stay the same. This is true at the circuit level, not at the 'subcomponent' level.</p>
+          <br>
+          <p>Say you have a rank-5 circuit, divided into 5 rank-1 subcomponents across layers. You should be allowed to multiply that rank-5 circuit by an arbitrary alpha in [0,1]. However, if you take each individual rank-1 subcomponent and multiply it by a different alpha_i in [0,1], this could totally change what directions the circuit reads from, and so shouldn't be allowed. E.g., call your circuit C and activations a. C = C1 + C2 + C3 + C4 + C5. Ca is around 0, so we can scale it by whatever. However, (aC1 + bC2 + cC3 + dC4 + eC5)*a might be some totally different thing.</p>
+          <br>
           <p>Another possibility is that the network's true circuits aren't actually that close to MDL, so our decomposition finds a more MDL solution which mimics the original model's output and weights perfectly, but has some 'wiggle room' left in the faithfulness loss.</p>
         </div>
       </article>
