Add 3 quick takes from LessWrong shortform

--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,18 @@
             <p><a href="quicktakes/parameter_decomposition.html">thoughts on scaling parameter decomposition</a></p>
             <span class="date">February 4, 2026</span>
           </div>
+          <div class="take">
+            <p><a href="quicktakes/burnout.html">burnout as aversive triggers</a></p>
+            <span class="date">September 1, 2025</span>
+          </div>
+          <div class="take">
+            <p><a href="quicktakes/rule_following.html">rule-following might scale</a></p>
+            <span class="date">May 5, 2025</span>
+          </div>
+          <div class="take">
+            <p><a href="quicktakes/ai_control.html">the instrumental case for AI control</a></p>
+            <span class="date">April 25, 2025</span>
+          </div>
           <!-- <div class="take">
             <p><a href="quicktakes/novel_insights.html">why haven't language models generated novel insights?</a></p>
             <span class="date">January 5, 2024</span>
