--- a/blog.html
+++ b/blog.html
@@ -34,12 +34,12 @@
         <div class="main-blog">
           <h1>longform</h1>
           <article>
-            <h2>diverse preference learning for capabilities and alignment</h2>
+            <h2>diverse preference learning — ICLR</h2>
             <p>our paper on improving output diversity in alignment — ICLR 2025</p>
             <a href="blog/diverse_preference_learning.html">Read More</a>
           </article>
           <article>
-            <h2>on the creation of narrow AI</h2>
+            <h2>on the creation of narrow AI — NeurIPS</h2>
             <p>our paper on building capable but narrow AI systems — NeurIPS 2025</p>
             <a href="blog/narrow_ai.html">Read More</a>
           </article>
