--- a/blog.html
+++ b/blog.html
@@ -34,13 +34,13 @@
         <div class="main-blog">
           <h1>longform</h1>
           <article>
-            <h2>diverse preference learning — ICLR</h2>
-            <p>our paper on improving output diversity in alignment — ICLR 2025</p>
+            <h2>diverse preference learning — ICLR 2025</h2>
+            <p>our paper on improving output diversity in alignment — ICLR 2025 2025</p>
             <a href="blog/diverse_preference_learning.html">Read More</a>
           </article>
           <article>
-            <h2>on the creation of narrow AI — NeurIPS</h2>
-            <p>our paper on building capable but narrow AI systems — NeurIPS 2025</p>
+            <h2>on the creation of narrow AI — NeurIPS 2025</h2>
+            <p>our paper on building capable but narrow AI systems — NeurIPS 2025 2025</p>
             <a href="blog/narrow_ai.html">Read More</a>
           </article>
           <article>
