--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body style="background: white;">
   <nav class="top-nav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
